--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         
         const contactLine = contactParts.join(' • ');
 
-        const logoUrl = 'https://i.imgur.com/RzrK92B.png';
+        // const logoUrl = 'https://i.imgur.com/RzrK92B.png';
+        const logoUrl = './images/logo.svg';
 
         return `<table cellpadding="0" cellspacing="0" border="0" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; font-size: 14px; line-height: 1.5; color: #2c2c2c;">
   <tr>
