--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         const contactLine = contactParts.join(' • ');
 
         // Logo paths for light and dark mode
-        const logoUrl = darkMode ? './images/logo-white.svg' : './images/logo.svg';
+        const logoUrl = darkMode ? './images/logo-white.svg' : './images/logo-black.svg';
         
         // Text colors for light and dark mode
         const textColor = darkMode ? '#ffffff' : '#2c2c2c';
