fix image file name

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         const { name, title, phone, email, twitter, instagram, facebook, youtube, spotify } = formData;
         
         // Logo paths for light and dark mode
-        const logoUrl = darkMode ? './images/logo-white.svg' : './images/logo.svg';
+        const logoUrl = darkMode ? './images/logo-white.svg' : './images/logo-black.svg';
         
         // Text colors for light and dark mode
         const textColor = darkMode ? '#ffffff' : '#2c2c2c';
