--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </tr>
   ${name ? `<tr><td style="font-weight: 600; font-size: 16px; color: ${textColor}; padding-bottom: 2px;">${name}</td></tr>` : ''}
   ${title ? `<tr><td style="color: ${mutedColor}; padding-bottom: 2px;">${title}</td></tr>` : ''}
-   <tr><td style="color: ${mutedColor}; padding-bottom: 2px; font-family: 'Futura PT', 'Futura', sans-serif; font-weight: 800;">Draft Rugby</td></tr>
+   <tr><td style="color: ${mutedColor}; padding-bottom: 2px; font-family: 'Futura PT', 'Futura', sans-serif; font-weight: 800;">DRAFT RUGBY</td></tr>
   ${contactLine ? `<tr><td style="color: ${mutedColor}; padding-top: 4px;">${contactLine}</td></tr>` : ''}
   ${socialIconsHTML}
 </table>`;
