--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
       </svg>
     );
 
+    const ChevronDown = ({ size = 24 }) => (
+      <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+        <polyline points="6 9 12 15 18 9"></polyline>
+      </svg>
+    );
+
+    const ChevronUp = ({ size = 24 }) => (
+      <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+        <polyline points="18 15 12 9 6 15"></polyline>
+      </svg>
+    );
+
     function EmailSignatureGenerator() {
       const [formData, setFormData] = useState({
         name: '',
@@ -80,6 +92,7 @@
       const [showModal, setShowModal] = useState(false);
       const [darkMode, setDarkMode] = useState(false);
       const [fadeIn, setFadeIn] = useState(false);
+      const [socialExpanded, setSocialExpanded] = useState(false);
 
       useEffect(() => {
         setTimeout(() => setFadeIn(true), 100);
@@ -341,73 +354,54 @@
                   </div>
 
                   <div className={`pt-4 border-t-2 ${darkMode ? 'border-gray-700' : 'border-gray-100'}`}>
-                    <h3 className={`text-sm font-semibold mb-3 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
-                      Social Media (Optional)
-                    </h3>
-                    
-                    {['twitter', 'instagram', 'facebook', 'youtube', 'spotify'].map(field => (
-                      <div key={field} className="relative mb-3">
-                        <label className={`block text-xs font-medium mb-1.5 capitalize ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
-                          {field}
-                        </label>
-                        <div className="relative">
-                          <input
-                            type="text"
-                            value={formData[field]}
-                            onChange={(e) => handleChange(field, e.target.value)}
-                            placeholder={field === 'twitter' || field === 'instagram' ? '@username' : 'username'}
-                            className={`w-full px-3 py-2 pr-10 rounded-lg border-2 transition-all focus:outline-none focus:ring-2 focus:ring-amber-500 ${
-                              darkMode 
-                                ? 'bg-gray-700 border-gray-600 text-white placeholder-gray-500' 
-                                : 'bg-gray-50 border-gray-200 text-gray-900 placeholder-gray-400'
-                            }`}
-                          />
-                          {formData[field] && (
-                            <button
-                              onClick={() => clearField(field)}
-                              className={`absolute right-3 top-1/2 -translate-y-1/2 p-1 rounded-full transition-colors ${
-                                darkMode ? 'hover:bg-gray-600 text-gray-400' : 'hover:bg-gray-200 text-gray-500'
-                              }`}
-                            >
-                              <X size={14} />
-                            </button>
-                          )}
-                        </div>
-                      </div>
-                    ))}
-                  </div>
-                </div>
+                    <button
+                      onClick={() => setSocialExpanded(!socialExpanded)}
+                      className={`flex items-center justify-between w-full text-left text-sm font-semibold mb-3 transition-colors ${
+                        darkMode ? 'text-gray-300 hover:text-gray-100' : 'text-gray-700 hover:text-gray-900'
+                      }`}
+                    >
+                      <span>Social Media (Optional)</span>
+                      {socialExpanded ? <ChevronUp size={16} /> : <ChevronDown size={16} />}
+                    </button>
 
-                <div className="mt-6 flex gap-3">
-                  <button
-                    onClick={copySignature}
-                    className="flex-1 bg-gradient-to-r from-amber-600 to-orange-600 hover:from-amber-700 hover:to-orange-700 text-white font-medium py-3 px-6 rounded-lg transition-all transform hover:scale-105 flex items-center justify-center gap-2"
-                  >
-                    {copied ? (
-                      <>
-                        <Check size={18} />
-                        Copied!
-                      </>
-                    ) : (
-                      <>
-                        <Copy size={18} />
-                        Copy Signature
-                      </>
-                    )}
-                  </button>
-                  
-                  <button
-                    onClick={() => setShowModal(true)}
-                    className={`p-3 rounded-lg transition-colors ${
-                      darkMode 
-                        ? 'bg-gray-700 hover:bg-gray-600 text-gray-300' 
-                        : 'bg-gray-100 hover:bg-gray-200 text-gray-700'
-                    }`}
-                    title="How to import?"
-                  >
-                    <HelpCircle size={20} />
-                  </button>
-                </div>
+                    <div
+                      className={`overflow-hidden transition-all duration-300 ease-in-out ${
+                        socialExpanded ? 'max-h-96 opacity-100' : 'max-h-0 opacity-0'
+                      }`}
+                    >
+                      {['twitter', 'instagram', 'facebook', 'youtube', 'spotify'].map(field => (
+                        <div key={field} className="relative mb-3">
+                          <label className={`block text-xs font-medium mb-1.5 capitalize ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
+                            {field}
+                          </label>
+                          <div className="relative">
+                            <input
+                              type="text"
+                              value={formData[field]}
+                              onChange={(e) => handleChange(field, e.target.value)}
+                              placeholder={field === 'twitter' || field === 'instagram' ? '@username' : 'username'}
+                              className={`w-full px-3 py-2 pr-10 rounded-lg border-2 transition-all focus:outline-none focus:ring-2 focus:ring-amber-500 ${
+                                darkMode
+                                  ? 'bg-gray-700 border-gray-600 text-white placeholder-gray-500'
+                                  : 'bg-gray-50 border-gray-200 text-gray-900 placeholder-gray-400'
+                              }`}
+                            />
+                            {formData[field] && (
+                              <button
+                                onClick={() => clearField(field)}
+                                className={`absolute right-3 top-1/2 -translate-y-1/2 p-1 rounded-full transition-colors ${
+                                  darkMode ? 'hover:bg-gray-600 text-gray-400' : 'hover:bg-gray-200 text-gray-500'
+                                }`}
+                              >
+                                <X size={14} />
+                              </button>
+                            )}
+                          </div>
+                        </div>
+                      ))}
+                    </div>
+                  </div>
+                 </div>
               </div>
 
               <div className={`${darkMode ? 'bg-gray-800' : 'bg-white'} rounded-2xl shadow-lg p-8`}>
@@ -437,6 +431,37 @@
                 <p className={`text-sm mt-4 ${darkMode ? 'text-gray-400' : 'text-gray-500'}`}>
                   Your signature updates as you type
                 </p>
+
+                <div className="mt-6 flex gap-3">
+                  <button
+                    onClick={copySignature}
+                    className="flex-1 bg-gradient-to-r from-amber-600 to-orange-600 hover:from-amber-700 hover:to-orange-700 text-white font-medium py-3 px-6 rounded-lg transition-all transform hover:scale-105 flex items-center justify-center gap-2"
+                  >
+                    {copied ? (
+                      <>
+                        <Check size={18} />
+                        Copied!
+                      </>
+                    ) : (
+                      <>
+                        <Copy size={18} />
+                        Copy Signature
+                      </>
+                    )}
+                  </button>
+
+                  <button
+                    onClick={() => setShowModal(true)}
+                    className={`p-3 rounded-lg transition-colors ${
+                      darkMode
+                        ? 'bg-gray-700 hover:bg-gray-600 text-gray-300'
+                        : 'bg-gray-100 hover:bg-gray-200 text-gray-700'
+                    }`}
+                    title="How to import?"
+                  >
+                    <HelpCircle size={20} />
+                  </button>
+                </div>
               </div>
             </div>
           </div>
